# prime-test

./: .gitignore  .~lock.0926.odp#  .~lock.2中間発表.odp#  .~lock.data.ods#  .~lock.中間2資料.ods#  2中間発表.odp  Cargo.toml  README.md  data.ods  test_env.txt  test_num.json  test_num.yaml  中間2資料.ods
.fleet/: run.json
Impress/: 0926.odp  1031.odp  1031_result.ods  論文提出前1.odp
bench_result/: 128.txt  2023_11_14.txt  2023_11_14_02.txt  2023_11_15.txt  2023_11_15_02.txt  2023_11_15_03.txt  2023_11_27_03.txt  256.txt
bench_result/1024/ll/base/: benchmark.json
bench_result/1024/ll/change/: estimates.json
bench_result/1024/ll/new/: estimates.json  sample.json  tukey.json
bench_result/1024/ll/report/: index.html
bench_result/1024/mr/base/: sample.json  tukey.json
bench_result/1024/mr/change/: estimates.json
bench_result/1024/mr/new/: estimates.json
bench_result/1024/mr/report/: index.html
bench_result/1024/report/: index.html
bench_result/128/ll/change/: estimates.json
bench_result/128/ll/new/: estimates.json  sample.json  tukey.json
bench_result/128/ll/report/: index.html
bench_result/128/mr/base/: sample.json  tukey.json
bench_result/128/mr/change/: estimates.json
bench_result/128/mr/new/: estimates.json
bench_result/128/mr/report/: index.html
bench_result/2048/ll/base/: sample.json
bench_result/2048/ll/change/: estimates.json
bench_result/2048/ll/new/: estimates.json  tukey.json
bench_result/MR+MR/128/: 128.txt
bench_result/MR+MR/256/: 256.txt
bench_result/MR+MR/512/: 512.txt
bench_result/MR+MR/64/: 64.txt
src/: euler.rs  lib.rs  ll.rs  main.rs  math.rs  mr.rs  test.rs  yaml.rs
src/CPP/: main.cpp
src/benches/: benchmark.rs
(+70 files in other folders)
