[package]
name = "prime-test"
version = "0.1.0"
edition = "2021"

# mold linker
[target.ARCHITECTURE]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.3"
rug = "1.22.0"
rand = "0.6"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }


[lib]
name = "safe_prime_test"
path = "src/lib.rs"
